# helios-zinc

./: .dockerignore  .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
deploy/: docker-compose.yml
docs/: api-contract.md  architecture.md  aws-deployment.md  load-testing.md
infra/aws/scripts/: deploy-all.sh  deploy-control-plane.sh  plan-control-plane.sh  run-replay-task.sh
infra/aws/terraform/: README.md  autoscaling.tf  ecs.tf  iam.tf  load_balancers.tf  locals.tf  logs.tf  msk.tf  networking.tf  outputs.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/clickhouse/: schema.sql
infra/postgres/: schema.sql
load/ab/: run-baseline.sh
load/k6/: control-plane.js
load/k6/results/: 2026-02-20-ab-healthz.txt  2026-02-20-ab-proxy.txt
proto/: buf.gen.yaml  buf.yaml
proto/helios/: event_envelope.proto
services/api-go/: Dockerfile  go.mod  go.sum
services/api-go/cmd/api/: main.go  main_test.go  openapi.yaml
services/api-go/cmd/api/web/: index.html
services/decoder-rs/: Cargo.toml  Dockerfile
services/decoder-rs/src/: main.rs
services/edge-go/: Dockerfile  go.mod
services/edge-go/cmd/edge/: main.go  main_test.go
services/gateway-rs/: Cargo.toml  Dockerfile
services/gateway-rs/src/: main.rs
services/replay-go/: Dockerfile  go.mod  go.sum
services/replay-go/cmd/replay/: main.go  main_test.go
