[package]
name = "helios-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
hex = "0.4"
rdkafka = { version = "0.36", features = ["cmake-build"] }
clickhouse = { version = "0.11", features = ["lz4"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
