[package]
name = "helios-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rdkafka = { version = "0.36", features = ["cmake-build"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
yellowstone-grpc-client = "12.0.0"
yellowstone-grpc-proto = "12.0.0"
bs58 = "0.5"
dotenvy = "0.15"
